# gcompris-teachers-handbook

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md  REUSE.toml  generate_all_html.sh  generate_all_pdf.sh  generate_common.sh  index.docbook
doc/: CMakeLists.txt  index.docbook
po/br/docs/gcompris-teachers-handbook/: index.docbook
po/ca/docs/gcompris-teachers-handbook/: index.docbook
po/es/docs/gcompris-teachers-handbook/: index.docbook
po/fr/docs/gcompris-teachers-handbook/: index.docbook
po/hr/docs/gcompris-teachers-handbook/: index.docbook
po/lt/docs/gcompris-teachers-handbook/: index.docbook
po/nl/docs/gcompris-teachers-handbook/: index.docbook
po/sq/docs/gcompris-teachers-handbook/: index.docbook
po/tr/docs/gcompris-teachers-handbook/: index.docbook
po/uk/docs/gcompris-teachers-handbook/: index.docbook
